generated/updating/4.17/_attributes/common-attributes.adoc
:_mod-docs-content-type: ATTRIBUTES
// The {product-title} attribute provides the context-sensitive name of the relevant OpenShift distribution, for example, "OpenShift Container Platform" or "OKD". The {product-version} attribute provides the product version relative to the distribution, for example "4.9".
// {product-title} and {product-version} are parsed when AsciiBinder queries the _distro_map.yml file in relation to the base branch of a pull request.
// See https://github.com/openshift/openshift-docs/blob/main/contributing_to_docs/doc_guidelines.adoc#product-name-and-version for more information on this topic.
// Other common attributes are defined in the following lines:
:data-uri:
:icons:
:experimental:
:toc: macro
:toc-title:
:imagesdir: images
:prewrap!:
:op-system-first: Red Hat Enterprise Linux CoreOS (RHCOS)
:op-system: RHCOS
:op-system-lowercase: rhcos
:op-system-base: RHEL
:op-system-base-full: Red Hat Enterprise Linux (RHEL)
:op-system-version: 9.x
:op-system-version-9: 9
ifdef::openshift-origin[]
:op-system-first: Fedora CoreOS (FCOS)
:op-system: FCOS
:op-system-lowercase: fcos
:op-system-base: Fedora
:op-system-base-full: Fedora
:op-system-version: 35
endif::[]
:tsb-name: Template Service Broker
:kebab: image:kebab.png[title="Options menu"]
:ai-full: Assisted Installer
:cluster-manager-first: Red Hat OpenShift Cluster Manager
:cluster-manager: OpenShift Cluster Manager
:cluster-manager-url: link:https://console.redhat.com/openshift[OpenShift Cluster Manager]
:cluster-manager-url-pull: link:https://console.redhat.com/openshift/install/pull-secret[pull secret from Red Hat OpenShift Cluster Manager]
:insights-advisor-url: link:https://console.redhat.com/openshift/insights/advisor/[Insights Advisor]
:hybrid-console: Red Hat Hybrid Cloud Console
:hybrid-console-second: Hybrid Cloud Console
:hybrid-console-url: link:https://console.redhat.com[Red Hat Hybrid Cloud Console]
// OADP attributes
:velero-domain: velero.io
:velero-version: 1.14
:oadp-first: OpenShift API for Data Protection (OADP)
:oadp-full: OpenShift API for Data Protection
:oadp-short: OADP
:oadp-version: 1.4.10
:oadp-version-1-3: 1.3.8
:oadp-version-1-4: 1.4.10
:oadp-bsl-api: backupstoragelocations.velero.io
:velero-overview: link:https://{velero-domain}/docs/v{velero-version}/locations/[Overview of backup and snapshot locations in the Velero documentation]
:velero-link: link:https://{velero-domain}/docs/v{velero-version}/[Velero {velero-version}]
:velero-cli-install: link:https://{velero-domain}/docs/v{velero-version}/basic-install/#install-the-cli["Install the CLI" on the Velero website]
:velero-1.12: link:https://{velero-domain}/docs/v1.12/[1.12]
:velero-1.14: link:https://{velero-domain}/docs/v1.14/[1.14]
:velero-1.16: link:https://{velero-domain}/docs/v1.16/[1.16]
:oc-first: pass:quotes[OpenShift CLI (`oc`)]
:product-registry: OpenShift image registry
:product-mirror-registry: Mirror registry for Red Hat OpenShift
:rh-storage-first: Red Hat OpenShift Data Foundation
:rh-storage: OpenShift Data Foundation
:rh-rhacm-first: Red Hat Advanced Cluster Management (RHACM)
:rh-rhacm: RHACM
:rh-rhacm-version: 2.11
:osc: OpenShift sandboxed containers
:osc-operator: OpenShift sandboxed containers Operator
:cert-manager-operator: cert-manager Operator for Red Hat OpenShift
:secondary-scheduler-operator-full: Secondary Scheduler Operator for Red Hat OpenShift
:secondary-scheduler-operator: Secondary Scheduler Operator
:descheduler-operator: Kube Descheduler Operator
// Backup and restore
:launch: image:app-launcher.png[title="Application Launcher"]
:mtc-first: Migration Toolkit for Containers (MTC)
:mtc-short: MTC
:mtc-full: Migration Toolkit for Containers
:mtc-version: 1.8
:mtc-version-z: 1.8.16
:mtc-legacy-image: 1.7
// builds (Valid only in 4.11 and later)
:builds-v2title: Builds for Red Hat OpenShift
:builds-v2shortname: OpenShift Builds v2
:builds-v1shortname: OpenShift Builds v1
ifdef::openshift-origin[]
:builds-v2title: Shipwright
:builds-v2shortname: Shipwright
:builds-v1shortname: Builds v1
endif::[]
// gitops
:gitops-title: Red Hat OpenShift GitOps
:gitops-shortname: GitOps
:gitops-ver: 1.1
:rh-app-icon: image:red-hat-applications-menu-icon.jpg[title="Red Hat applications"]
// pipelines
:pipelines-title: Red Hat OpenShift Pipelines
:pipelines-shortname: OpenShift Pipelines
:pipelines-ver: pipelines-1.18
:pipelines-version-number: 1.18
:tekton-chains: Tekton Chains
:tekton-hub: Tekton Hub
:artifact-hub: Artifact Hub
:pac: Pipelines as Code
// odo
:odo-title: odo
// OpenShift Kubernetes Engine
:oke: OpenShift Kubernetes Engine
// OpenShift Platform Plus
:opp: OpenShift Platform Plus
// openshift virtualization (cnv)
:VirtProductName: OpenShift Virtualization
:VirtVersion: 4.17
:HCOVersion: 4.17.0
:HCOVersionPrev: 4.16.0
:CNVNamespace: openshift-cnv
:CNVOperatorDisplayName: OpenShift Virtualization Operator
:CNVSubscriptionSpecSource: redhat-operators
:CNVSubscriptionSpecName: kubevirt-hyperconverged
:delete: image:delete.png[title="Delete"]
ifdef::openshift-origin[]
:VirtProductName: OKD Virtualization
:CNVNamespace: kubevirt-hyperconverged
:CNVOperatorDisplayName: KubeVirt HyperConverged Cluster Operator
:CNVSubscriptionSpecSource: community-operators
:CNVSubscriptionSpecName: community-kubevirt-hyperconverged
endif::[]
//distributed tracing
:DTProductName: Red{nbsp}Hat OpenShift Distributed Tracing Platform
:DTShortName: Distributed Tracing Platform
:DTProductVersion: 3.1
:odf-full: Red Hat OpenShift Data Foundation
// keeping Jaeger... attributes because of observability/otel/snippets/distr-tracing-assembly-tip-for-jaeger-replacements.adoc and the OSSM v2 docs lifecycle
:JaegerName: Red{nbsp}Hat OpenShift Distributed Tracing Platform (Jaeger)
:JaegerOperator: Red{nbsp}Hat OpenShift Distributed Tracing Platform
:JaegerShortName: Distributed Tracing Platform (Jaeger)
:JaegerOperator: Red{nbsp}Hat OpenShift Distributed Tracing Platform
:JaegerVersion: 1.53.0
:OTELName: Red Hat build of OpenTelemetry
:OTELShortName: Red Hat build of OpenTelemetry
:OTELOperator: Red Hat build of OpenTelemetry Operator
:OTELVersion: 0.93.0
:TempoName: Red{nbsp}Hat OpenShift Distributed Tracing Platform
:TempoShortName: Distributed Tracing Platform
:TempoOperator: Tempo Operator
:TempoVersion: 2.3.1
// telco
ifdef::telco-ran[]
:rds: telco RAN DU
:rds-caps: Telco RAN DU
:rds-first: Telco RAN distributed unit (DU)
endif::[]
ifdef::telco-core[]
:rds: telco core
:rds-caps: Telco core
endif::[]
// lightspeed
:ols-official: Red Hat OpenShift Lightspeed
:ols: OpenShift Lightspeed
// logging
:logging: logging
:logging-uc: Logging
:for: for Red Hat OpenShift
:clo: Red Hat OpenShift Logging Operator
:loki-op: Loki Operator
:es-op: OpenShift Elasticsearch Operator
:log-plug: logging Console plugin
// observability
:ObservabilityLongName: Red Hat OpenShift Observability
:ObservabilityShortName: Observability
// Cluster Monitoring Operator
:cmo-first: Cluster Monitoring Operator (CMO)
:cmo-full: Cluster Monitoring Operator
:cmo-short: CMO
// power monitoring
:PM-title-c: Power monitoring for Red Hat OpenShift
:PM-title: power monitoring for Red Hat OpenShift
:PM-shortname: power monitoring
:PM-shortname-c: Power monitoring
:PM-operator: Power monitoring Operator
:PM-kepler: Kepler
// serverless
:ServerlessProductName: OpenShift Serverless
:ServerlessProductShortName: Serverless
:ServerlessOperatorName: OpenShift Serverless Operator
:FunctionsProductName: OpenShift Serverless Functions
// service mesh v2
:product-dedicated: Red Hat OpenShift Dedicated
:product-rosa: Red Hat OpenShift Service on AWS
:SMProductName: Red Hat OpenShift Service Mesh
:SMProductShortName: Service Mesh
:SMProductVersion: 2.6.16
:MaistraVersion: 2.6
:KialiProduct: Kiali Operator provided by Red Hat
:SMPlugin: OpenShift Service Mesh Console (OSSMC) plugin
:SMPluginShort: OSSMC plugin
// Service Mesh v1
:SMProductVersion1x: 1.1.18.2
// Windows containers
:productwinc: Red{nbsp}Hat OpenShift support for Windows Containers
// Red Hat Quay Container Security Operator
:rhq-cso: Red{nbsp}Hat Quay Container Security Operator
// Red Hat Quay
:quay: Red{nbsp}Hat Quay
:sno: single-node OpenShift
:sno-caps: Single-node OpenShift
:sno-okd: single-node OKD
:sno-caps-okd: Single-node OKD
// TALO and Redfish events Operators
:cgu-operator-first: Topology Aware Lifecycle Manager (TALM)
:cgu-operator-full: Topology Aware Lifecycle Manager
:cgu-operator: TALM
:redfish-operator: Bare Metal Event Relay
// Formerly known as CodeReady Containers and CodeReady Workspaces
:openshift-local-productname: Red Hat OpenShift Local
:openshift-dev-spaces-productname: Red Hat OpenShift Dev Spaces
// Factory-precaching-cli tool
:factory-prestaging-tool: factory-precaching-cli tool
:factory-prestaging-tool-caps: Factory-precaching-cli tool
:openshift-networking: Red Hat OpenShift Networking
// TODO - this probably needs to be different for OKD
// ifdef::openshift-origin[]
// :openshift-networking: OKD Networking
// endif::[]
// logical volume manager storage
:lvms-first: Logical Volume Manager (LVM) Storage
:lvms: LVM Storage
//Operator SDK version
:osdk_ver: 1.36.1
//Operator SDK version that shipped with the previous OCP 4.x release
:osdk_ver_n1: 1.31.0
//Version-agnostic OLM
:olm-first: Operator Lifecycle Manager (OLM)
:olm: OLM
// Initial version of OLM that shipped with OCP 4, aka "v0"
:olmv0: legacy OLM
:olmv0-caps: Legacy OLM
:olmv0-first: legacy Operator Lifecycle Manager (OLM)
:olmv0-first-caps: Legacy Operator Lifecycle Manager (OLM)
// Next-gen (OCP 4.14+) Operator Lifecycle Manager, aka "v1"
:olmv1: OLM 1.0
:olmv1-first: Operator Lifecycle Manager (OLM) 1.0
//
:ztp-first: GitOps Zero Touch Provisioning (ZTP)
:ztp: GitOps ZTP
:3no: three-node OpenShift
:3no-caps: Three-node OpenShift
:run-once-operator: Run Once Duration Override Operator
// Web terminal
:web-terminal-op: Web Terminal Operator
:devworkspace-op: DevWorkspace Operator
:secrets-store-driver: Secrets Store CSI driver
:secrets-store-operator: Secrets Store CSI Driver Operator
// Cluster Observability Operator
:coo-first: Cluster Observability Operator (COO)
:coo-full: Cluster Observability Operator
:coo-short: COO
// ODF
:odf-first: Red Hat OpenShift Data Foundation (ODF)
:odf-full: Red Hat OpenShift Data Foundation
:odf-short: ODF
:rh-dev-hub: Red Hat Developer Hub
// IBU
:lcao: Lifecycle Agent
// Cloud provider names
// Alibaba Cloud
:alibaba: Alibaba Cloud
// Amazon Web Services (AWS)
:aws-first: Amazon Web Services (AWS)
:aws-full: Amazon Web Services
:aws-short: AWS
// Google Cloud
//as of Oct 15 2025, the only acceptable name is Google Cloud
:gcp-first: Google Cloud
:gcp-full: Google Cloud
:gcp-short: Google Cloud
// IBM general
:ibm-name: IBM(R)
:ibm-title: IBM
// IBM Cloud
:ibm-cloud-name: IBM Cloud(R)
:ibm-cloud-title: IBM Cloud
// IBM Cloud Bare Metal (Classic)
:ibm-cloud-bm: IBM Cloud(R) Bare Metal (Classic)
:ibm-cloud-bm-title: IBM Cloud Bare Metal (Classic)
// IBM Cloud Object Storage (COS)
:ibm-cloud-object-storage: IBM Cloud Object Storage (COS)
// IBM Power
:ibm-power-name: IBM Power(R)
:ibm-power-title: IBM Power
:ibm-power-server-name: IBM Power(R) Virtual Server
:ibm-power-server-title: IBM Power Virtual Server
// IBM zSystems
:ibm-z-name: IBM Z(R)
:ibm-z-title: IBM Z
:ibm-linuxone-name: IBM(R) LinuxONE
:ibm-linuxone-title: IBM LinuxONE
// Microsoft Azure
:azure-first: Microsoft Azure
:azure-full: Microsoft Azure
:azure-short: Azure
// Oracle
:oci-first: Oracle(R) Cloud Infrastructure (OCI)
:oci-first-no-rt: Oracle Cloud Infrastructure (OCI)
:oci: OCI
:oci-ccm-full: Oracle Cloud Controller Manager (CCM)
:oci-ccm: Oracle CCM
:oci-csi-full: Oracle Container Storage Interface (CSI)
:oci-csi: Oracle CSI
:ocid-first: Oracle(R) Cloud Identifier (OCID)
:ocid: OCID
:ocvs-first: Oracle(R) Cloud VMware Solution (OCVS)
:ocvs: OCVS
// Red Hat OpenStack Platform (RHOSP)/OpenStack
ifndef::openshift-origin[]
:rh-openstack-first: Red Hat OpenStack Platform (RHOSP)
:rh-openstack: RHOSP
endif::openshift-origin[]
ifdef::openshift-origin[]
:rh-openstack-first: OpenStack
:rh-openstack: OpenStack
endif::openshift-origin[]
// VMware vSphere
:vmw-first: VMware vSphere
:vmw-full: VMware vSphere
:vmw-short: vSphere
// Token-based auth products
// AWS Security Token Service
:sts-first: Security Token Service (STS)
:sts-full: Security Token Service
:sts-short: STS
// Microsoft Entra Workload ID (FKA Azure Active Directory Workload Identities)
:entra-first: Microsoft Entra Workload ID
:entra-short: Workload ID
// Cluster API terminology
// Cluster CAPI Operator
:cluster-capi-operator: Cluster CAPI Operator
// Cluster API Provider Amazon Web Services (AWS)
:cap-aws-first: Cluster API Provider Amazon Web Services (AWS)
:cap-aws-short: Cluster API Provider AWS
// Cluster API Provider Google Cloud Platform (GCP)
:cap-gcp-first: Cluster API Provider Google Cloud Platform (GCP)
:cap-gcp-short: Cluster API Provider GCP
// Cluster API Provider IBM Cloud
:cap-ibm-first: Cluster API Provider IBM Cloud
:cap-ibm-short: Cluster API Provider IBM Cloud
// Cluster API Provider Kubevirt
:cap-kubevirt-first: Cluster API Provider Kubevirt
:cap-kubevirt-short: Cluster API Provider Kubevirt
// Cluster API Provider Microsoft Azure
:cap-azure-first: Cluster API Provider Microsoft Azure
:cap-azure-short: Cluster API Provider Azure
// Cluster API Provider Nutanix
:cap-nutanix-first: Cluster API Provider Nutanix
:cap-nutanix-short: Cluster API Provider Nutanix
// Cluster API Provider OpenStack
:cap-openstack-first: Cluster API Provider OpenStack
:cap-openstack-short: Cluster API Provider OpenStack
// Cluster API Provider Oracle Cloud Infrastructure (OCI)
:cap-oci-first: Cluster API Provider Oracle Cloud Infrastructure (OCI)
:cap-oci-short: Cluster API Provider OCI
// Cluster API Provider VMware vSphere
:cap-vsphere-first: Cluster API Provider VMware vSphere
:cap-vsphere-short: Cluster API Provider vSphere
// Hosted control planes related attributes
:hcp-capital: Hosted control planes
:hcp: hosted control planes
:mce: multicluster engine for Kubernetes Operator
:mce-short: multicluster engine Operator
